# cat-fish-weekly

./: README.md  generate_readme.py  pyproject.toml
.github/ISSUE_TEMPLATE/: recommendations.md
.github/workflows/: release.yml
issues/: 猫鱼周刊 vol. 000 我有独特的创作技巧.md  猫鱼周刊 vol. 001 新的开始.md  猫鱼周刊 vol. 002 2023年，但是 Java 8.md  猫鱼周刊 vol. 003 可交互的技术文章真是泰酷辣！.md  猫鱼周刊 vol. 004 H311O!.md  猫鱼周刊 vol. 005 一些在线小工具集.md  猫鱼周刊 vol. 006 年终总结时间到！.md  猫鱼周刊 vol. 007 2024新年快乐！.md  猫鱼周刊 vol. 008 通知服务大乱斗.md  猫鱼周刊 vol. 009 Go 1.22 要来啦！.md  猫鱼周刊 vol. 010 在线画图哪家强？.md  猫鱼周刊 vol. 011 程序员应该知道的心理学.md  猫鱼周刊 vol. 012 新年快乐，龙马精神！.md  猫鱼周刊 vol. 013 Go 的函数式编程.md  猫鱼周刊 vol. 014 技术无罪论.md  猫鱼周刊 vol. 015 时间怎么越来越快？.md  猫鱼周刊 vol. 016 万物归于 Docker ！.md  猫鱼周刊 vol. 017 LLM 该怎么落地？.md  猫鱼周刊 vol. 018 LLM 入门指北.md  猫鱼周刊 vol. 019 55年前的大型机.md  猫鱼周刊 vol. 020 见过 72 个轮的车吗？.md  猫鱼周刊 vol. 021 开源成长之路.md  猫鱼周刊 vol. 022 小心你的 S3 桶！.md  猫鱼周刊 vol. 023 新款 iPad 到底值不值得买？.md  猫鱼周刊 vol. 024 如何训练一个自己的LLM.md  猫鱼周刊 vol. 025 正在加速崩塌的「中文」.md  猫鱼周刊 vol. 026 退一步海阔天空.md  猫鱼周刊 vol. 027 广州特有的松弛感.md  猫鱼周刊 vol. 028 走啊，去扫街！.md  猫鱼周刊 vol. 029 内地第一家麦当劳.md  猫鱼周刊 vol. 030 国内的「开源」环境.md  猫鱼周刊 vol. 031 Code Review 有用吗？.md  猫鱼周刊 vol. 032 蓝调时刻.md
templates/: readme.tmpl
