[tool.poetry]
name = "cat-fish-weekly"
version = "0.1.0"
description = ""
authors = ["Leslie Leung <lesily9@gmail.com>"]
readme = "README.md"
packages = [{include = "cat_fish_weekly"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
markdown = "^3.6"
isort = "^5.13.2"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
